[gd_scene load_steps=10 format=3 uid="uid://csqbs0iyymc1w"]

[ext_resource type="Script" path="res://scenes/Shops/MeteorologicalInstitute.gd" id="1_n0bia"]
[ext_resource type="PackedScene" uid="uid://ck17xbn21yrd0" path="res://prefabs/Dialogue/DialoguePlayer/DialoguePlayer.tscn" id="2_v7tks"]
[ext_resource type="JSON" path="res://dialogue/Shopkeepers/Piper.json" id="3_hefv6"]
[ext_resource type="Texture2D" uid="uid://df67ngscon1sx" path="res://assets/background/quingsterybgs_meteorology.png" id="4_5jdj1"]
[ext_resource type="Texture2D" uid="uid://bga8coki52p1e" path="res://assets/character/talksprites/quingesterynpc_piper_flats.png" id="5_qer8t"]
[ext_resource type="PackedScene" uid="uid://desvgeqvimub7" path="res://prefabs/Dialogue/DialogueBox/ShopBox.tscn" id="6_5wmxw"]
[ext_resource type="PackedScene" uid="uid://cpd8q7ortkh0f" path="res://prefabs/UI/WeatherDisplay/WeatherDisplay.tscn" id="8_kinxy"]
[ext_resource type="PackedScene" uid="uid://bw7q1cc3tci2i" path="res://prefabs/UI/NavButtons/NavButtons.tscn" id="8_wr8hf"]
[ext_resource type="PackedScene" uid="uid://dom8vrn6qhhpc" path="res://prefabs/UI/StatusInfo/WeatherHUD.tscn" id="9_3yr2h"]

[node name="MeteorologicalInstitute" type="Node2D"]
script = ExtResource("1_n0bia")

[node name="DialoguePlayer" parent="." instance=ExtResource("2_v7tks")]
dialogue_file = ExtResource("3_hefv6")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_5jdj1")
centered = false

[node name="ShopBox" parent="." instance=ExtResource("6_5wmxw")]

[node name="Character" parent="ShopBox/Control" index="0"]
texture = ExtResource("5_qer8t")

[node name="NavButtons" parent="." instance=ExtResource("8_wr8hf")]
offset_right = 960.0
offset_bottom = 540.0

[node name="Button1" parent="NavButtons/NavList" index="0"]
text = "View Forecast"

[node name="Button2" parent="NavButtons/NavList" index="1"]
visible = false

[node name="Button4" parent="NavButtons/NavList" index="3"]
text = "Leave"

[node name="WeatherDisplay" parent="." instance=ExtResource("8_kinxy")]
visible = false

[node name="WeatherHUD" parent="." instance=ExtResource("9_3yr2h")]

[connection signal="pressed" from="NavButtons/NavList/Button1" to="." method="_on_weather_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button3" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button4" to="." method="_on_leave_pressed"]

[editable path="ShopBox"]
[editable path="NavButtons"]
